Expose traffic split mode
